Fixed overflow top/sides on mobile

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,20 +1,20 @@
 html, body {
     height: 100%;
+    width: 100%;
+    overflow-x: hidden; 
+    overflow-y: hidden; 
 
 }
 
 body {
-    
-    background-image: url(/assets/images/macbookPro.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    
     /*
-    background: linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)),url(/assets/images/macbookPro.jpg) no-repeat center fixed;
+    background-image: url(/assets/images/macbookPro.jpg)no-repeat center fixed;
     background-size: cover;
     */
+
+    background: linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)),url(/assets/images/macbookPro.jpg) no-repeat center fixed;
+    background-size: cover;
+    
 }
 
 
